--- a/biryani/i18n/biryani.pot
+++ b/biryani/i18n/biryani.pot
@@ -1,5 +1,5 @@
 # Translations template for Biryani.
-# Copyright (C) 2011 ORGANIZATION
+# Copyright (C) 2011 Easter-eggs
 # This file is distributed under the same license as the Biryani project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
 #
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Biryani 0.8dev\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2011-08-12 22:23+0200\n"
+"Report-Msgid-Bugs-To: eraviart@easter-eggs.com\n"
+"POT-Creation-Date: 2011-08-12 22:58+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
