--- a/biryani/i18n/fr/LC_MESSAGES/biryani.po
+++ b/biryani/i18n/fr/LC_MESSAGES/biryani.po
@@ -1,21 +1,23 @@
-# French translations for Biryani.
-# Copyright (C) 2011 ORGANIZATION
+# Translations template for Biryani.
+# Copyright (C) 2011 Easter-eggs
 # This file is distributed under the same license as the Biryani project.
+# 
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# Emmanuel  <emmanuel@raviart.com>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Biryani 0.8dev\n"
+"Project-Id-Version: Biryani\n"
 "Report-Msgid-Bugs-To: eraviart@easter-eggs.com\n"
-"POT-Creation-Date: 2011-08-13 14:23+0200\n"
-"PO-Revision-Date: 2011-08-12 22:17+0100\n"
-"Last-Translator: Emmanuel Raviart <eraviart@easter-eggs.com>\n"
-"Language-Team: French <traduc@traduc.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"POT-Creation-Date: 2011-08-16 06:47+0200\n"
+"PO-Revision-Date: 2011-08-16 05:37+0000\n"
+"Last-Translator: eraviart <emmanuel@raviart.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 0.9.6\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 #: biryani/babelconv.py:62 biryani/bsonconv.py:81
 msgid "Invalid value"
@@ -55,11 +57,11 @@ msgstr "Une erreur est survenue"
 
 #: biryani/baseconv.py:555
 msgid "Unknown key: {0}"
-msgstr ""
+msgstr "Clé inconnue : {0}"
 
 #: biryani/baseconv.py:562
 msgid "Index out of range: {0}"
-msgstr ""
+msgstr "Index en dehors des limites : {0}"
 
 #: biryani/baseconv.py:921
 msgid "Value must be a float"
@@ -131,7 +133,7 @@ msgstr "Numéro de carte de crédit incorrect (mauvais code d'erreur)"
 
 #: biryani/creditcardconv.py:279
 msgid "Invalid security code for credit card"
-msgstr ""
+msgstr "Code de sécurité incorrect pour la carte de crédit"
 
 #: biryani/creditcardconv.py:286
 msgid "Unknown type of credit card"
@@ -179,7 +181,8 @@ msgstr "Numéro de téléphone international inconnu"
 
 #: biryani/frconv.py:89
 msgid "Unexpected first digit in phone number: {0} instead of 0"
-msgstr "Le premier chiffre du numéro de téléphone est inattendu : {0} au lieu de 0"
+msgstr ""
+"Le premier chiffre du numéro de téléphone est inattendu : {0} au lieu de 0"
 
 #: biryani/frconv.py:92
 msgid "Wrong number of digits in phone number"
@@ -188,4 +191,5 @@ msgstr "Mauvais nombre de chiffres dans le numéro de téléphone"
 #: biryani/nonstandard/deprecatedbaseconv.py:124
 msgid "Invalid value format"
 msgstr "Format de la valeur incorrect"
+
 
