Add, remove and rename converters.
Add converters:
* :func:`biryani.baseconv.make_str_to_normal_form`.
* :func:`biryani.baseconv.make_str_to_slug`.
* :func:`biryani.frconv.str_to_depcom`.
* :func:`biryani.frconv.str_to_lenient_depcom`.

Remove converters:

* :func:`biryani.baseconv.clean_str_to_slug` (redundant with :func:`biryani.baseconv.str_to_slug`)
* :func:`biryani.baseconv.clean_str_to_url_name` (redundant with :func:`biryani.baseconv.str_to_url_name`)

Rename converters:

* :func:`biryani.baseconv.clean_str_to_url` to :func:`biryani.baseconv.make_clean_str_to_url`.
* :func:`biryani.baseconv.str_to_url` to :func:`biryani.baseconv.make_str_to_url`.
* :func:`biryani.baseconv.test_exists` to :func:`biryani.baseconv.exists`.
* :func:`biryani.creditcardconv.clean_str_to_credit_card_number` to :func:`biryani.creditcardconv.make_clean_str_to_credit_card_number`.
* :func:`biryani.creditcardconv.str_to_credit_card_number` to :func:`biryani.creditcardconv.make_str_to_credit_card_number`.
* :func:`biryani.creditcardconv.str_to_credit_card_security_code` to :func:`biryani.creditcardconv.make_str_to_credit_card_security_code`.
* :func:`biryani.objectconv.dict_to_object` to :func:`objectconv.make_dict_to_object`.

--- a/docs/source/i18n.rst
+++ b/docs/source/i18n.rst
@@ -44,17 +44,17 @@ To use this newly defined state for your conversions:
 
 >>> from biryani import baseconv as conv
 ...
->>> conv.test_exists(None)
+>>> conv.exists(None)
 (None, u'Missing value')
->>> conv.test_exists(None, state = states.default_state)
+>>> conv.exists(None, state = states.default_state)
 (None, u'Missing value')
->>> conv.test_exists(None, state = french_state)
+>>> conv.exists(None, state = french_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.test_exists)(None, state = french_state)
+>>> conv.pipe(conv.str_to_int, conv.exists)(None, state = french_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.test_exists)(u'Hello world!')
+>>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!')
 (u'Hello world!', u'Value must be an integer')
->>> conv.pipe(conv.str_to_int, conv.test_exists)(u'Hello world!', state = french_state)
+>>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!', state = french_state)
 (u'Hello world!', u'La valeur doit \xeatre un entier')
 
 
@@ -77,14 +77,14 @@ When using *Biryani* in web applications, for example, you will often need to di
 ...         return translation.ugettext
 
 >>> user_state = UserState()
->>> conv.test_exists(None, state = user_state)
+>>> conv.exists(None, state = user_state)
 (None, u'Missing value')
 
 >>> french_user_state = UserState()
 >>> french_user_state.languages = ['fr_FR', 'fr']
->>> conv.test_exists(None, state = french_user_state)
+>>> conv.exists(None, state = french_user_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.test_exists)(u'Hello world!', state = french_user_state)
+>>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!', state = french_user_state)
 (u'Hello world!', u'La valeur doit \xeatre un entier')
 
 
