--- a/docs/source/i18n.rst
+++ b/docs/source/i18n.rst
@@ -54,17 +54,17 @@ Once the state has been properly defined, you can use it for your conversions:
 
 >>> from biryani import baseconv as conv
 ...
->>> conv.exists(None)
+>>> conv.not_none(None)
 (None, u'Missing value')
->>> conv.exists(None, state = states.default_state)
+>>> conv.not_none(None, state = states.default_state)
 (None, u'Missing value')
->>> conv.exists(None, state = french_state)
+>>> conv.not_none(None, state = french_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.exists)(None, state = french_state)
+>>> conv.pipe(conv.str_to_int, conv.not_none)(None, state = french_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!')
+>>> conv.pipe(conv.str_to_int, conv.not_none)(u'Hello world!')
 (u'Hello world!', u'Value must be an integer')
->>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!', state = french_state)
+>>> conv.pipe(conv.str_to_int, conv.not_none)(u'Hello world!', state = french_state)
 (u'Hello world!', u'La valeur doit \xeatre un entier')
 
 
@@ -87,14 +87,14 @@ When using *Biryani* in web applications, for example, you will often need to di
 ...         return translation.ugettext
 
 >>> user_state = UserState()
->>> conv.exists(None, state = user_state)
+>>> conv.not_none(None, state = user_state)
 (None, u'Missing value')
 
 >>> french_user_state = UserState()
 >>> french_user_state.languages = ['fr_FR', 'fr']
->>> conv.exists(None, state = french_user_state)
+>>> conv.not_none(None, state = french_user_state)
 (None, u'Valeur manquante')
->>> conv.pipe(conv.str_to_int, conv.exists)(u'Hello world!', state = french_user_state)
+>>> conv.pipe(conv.str_to_int, conv.not_none)(u'Hello world!', state = french_user_state)
 (u'Hello world!', u'La valeur doit \xeatre un entier')
 
 
