--- a/biryani/i18n/fr/LC_MESSAGES/biryani.po
+++ b/biryani/i18n/fr/LC_MESSAGES/biryani.po
@@ -6,18 +6,20 @@
 # Emmanuel <emmanuel@raviart.com>, 2013-2014
 msgid ""
 msgstr ""
-"Project-Id-Version:  Biryani\n"
+"Project-Id-Version: Biryani\n"
 "Report-Msgid-Bugs-To: emmanuel@raviart.com\n"
-"POT-Creation-Date: 2014-12-16 15:51+0100\n"
-"PO-Revision-Date: 2014-06-15 11:06+0000\n"
-"Last-Translator: Emmanuel <emmanuel@raviart.com>\n"
-"Language-Team: French "
-"(http://www.transifex.com/projects/p/biryani/language/fr/)\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"POT-Creation-Date: 2015-01-19 11:40+0100\n"
+"PO-Revision-Date: 2015-01-19 11:40+0100\n"
+"Last-Translator: Christophe Benz <christophe.benz@data.gouv.fr>\n"
+"Language-Team: French (http://www.transifex.com/projects/p/biryani/language/"
+"fr/)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
+"Language: fr\n"
+"X-Generator: Poedit 1.6.10\n"
 
 #: biryani/babelconv.py:64 biryani/bsonconv.py:186
 msgid "Invalid value"
@@ -135,19 +137,23 @@ msgstr "La valeur doit être {0}"
 msgid "Value is not an instance of {0}"
 msgstr "La valeur n'est pas une instance de {0}"
 
-#: biryani/baseconv.py:2162
+#: biryani/baseconv.py:2167
+msgid "Value is not a subclass of {0}"
+msgstr "La valeur n'est pas une sous-classe de {0}"
+
+#: biryani/baseconv.py:2189
 msgid "Value must be less than or equal to {0}"
 msgstr "La valeur doit être inférieure ou égale à {0}"
 
-#: biryani/baseconv.py:2165
+#: biryani/baseconv.py:2192
 msgid "Unexpected value"
 msgstr "Valeur inattendue"
 
-#: biryani/baseconv.py:2210
+#: biryani/baseconv.py:2237
 msgid "Value must not belong to {0}"
 msgstr "La valeur ne doit pas appartenir à {0}"
 
-#: biryani/baseconv.py:2213
+#: biryani/baseconv.py:2240
 msgid "Missing value"
 msgstr "Valeur manquante"
 
@@ -241,7 +247,8 @@ msgstr "Numéro de téléphone international inconnu"
 
 #: biryani/frconv.py:241
 msgid "Unexpected first digit in phone number: {0} instead of 0"
-msgstr "Le premier chiffre du numéro de téléphone est inattendu : {0} au lieu de 0"
+msgstr ""
+"Le premier chiffre du numéro de téléphone est inattendu : {0} au lieu de 0"
 
 #: biryani/frconv.py:245
 msgid "Wrong number of digits in phone number"
@@ -381,8 +388,8 @@ msgstr "Le domaine \"{0}\" n'existe pas"
 #: biryani/netconv.py:124
 msgid "An error occured when trying to connect to the web server: {0:d} {1}"
 msgstr ""
-"Une erreur est survenue durant la tentative de connexion au serveur web :"
-" {0:d} {1}"
+"Une erreur est survenue durant la tentative de connexion au serveur web : {0:"
+"d} {1}"
 
 #: biryani/netconv.py:128
 msgid "The web server responded with a bad status code: {0:d} {1}"
@@ -391,8 +398,7 @@ msgstr "Le serveur web a répondu avec un mauvais code d'état : {0:d} {1}"
 #: biryani/netconv.py:131
 msgid "An error occured when trying to connect to the web server: {0}"
 msgstr ""
-"Une erreur est survenue durant la tentative de connexion au serveur web :"
-" {0}"
+"Une erreur est survenue durant la tentative de connexion au serveur web : {0}"
 
 #: biryani/uuidconv.py:48
 msgid "Invalid UUID"
