--- a/biryani/i18n/fr/LC_MESSAGES/biryani.po
+++ b/biryani/i18n/fr/LC_MESSAGES/biryani.po
@@ -1,5 +1,5 @@
 # French translations for Biryani.
-# Copyright (C) 2009 - 2014 Emmanuel Raviart
+# Copyright (C) 2009, 2010, 2011, 2012, 2013, 2014, 2015 Emmanuel Raviart
 # This file is distributed under the same license as the Biryani project.
 #
 # Translators:
