--- a/biryani/i18n/biryani.pot
+++ b/biryani/i18n/biryani.pot
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Biryani 0.10.3\n"
+"Project-Id-Version: Biryani 0.10.4dev\n"
 "Report-Msgid-Bugs-To: emmanuel@raviart.com\n"
 "POT-Creation-Date: 2015-01-19 11:40+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
